--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,7 +6,4 @@
   </ul>
   <h3 class="text-muted">AngularD3</h3>
 </div>
-<div d3-bars bar-height="20" bar-padding="5"></div>
-<ul>
-  <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-</ul>
+<d3-bars data="d3Data"></d3-bars>
