--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,11 @@
-<div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h3 class="text-muted">AngularD3</h3>
+<div class="menu">
+  <header>
+    <h1 class="text-muted">AngularD3</h1>
+  </header>
 </div>
-<d3-bars data="d3Data"></d3-bars>
+<div class="content">
+  <header>
+    <h2>Stats yo</h2>
+  </header>
+  <d3-bars data="d3Data"></d3-bars>
+</div>
