--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -1,13 +1,11 @@
 @import "globals/variables";
 
 body {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-family: $font-main, sans-serif;
-    font-weight: 300;
+  font-family: $font-main, sans-serif;
+  font-weight: 300;
 }
 
-h1,h2,h3,h4,h5 {
-    font-family: $font-main, sans-serif;
-    font-weight: 300;
+p,h1,h2,h3,h4,h5 {
+  font-family: $font-main, sans-serif;
+  font-weight: 300;
 }
