angular restructure, modules

--- a/app/views/donut.html
+++ b/app/views/donut.html
@@ -2,6 +2,6 @@
   <header>
     <h2>Stats yo</h2>
   </header>
-  <d3-bars data="d3Data"></d3-bars>
-  <nav nav-list></nav>
+  <d3-donut data="donutData"></d3-donut>
+  donut
 </div>
