--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 
 // Libs
 @import "http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400";
+@import "compass/reset";
 @import "sass-bootstrap/lib/bootstrap";
 @import "globals/variables";
 
