--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,6 @@
 <div class="content">
   <header>
-    <h2>Stats yo</h2>
+    <h2>Bars yo</h2>
   </header>
   <d3-bars data="d3Data"></d3-bars>
-  <nav nav-list></nav>
 </div>
