--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -7,3 +7,18 @@
   top: 0;
   height: 100%;
 }
+
+.menu, .content {
+  padding-top: 10px;
+  padding: 20px;
+}
+
+.menu header, .content header {
+  height: 50px;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+  margin-bottom: 20px;
+
+  h1, h2 {
+    font-size: 30px;
+  }
+}
