--- a/app/views/donut.html
+++ b/app/views/donut.html
@@ -1,6 +1,6 @@
 <div class="content">
   <header>
-    <h2>Stats yo</h2>
+    <h2>Donut yo</h2>
   </header>
   <d3-donut data="donutData"></d3-donut>
   donut
