--- a/app/styles/globals/_variables.scss
+++ b/app/styles/globals/_variables.scss
@@ -2,3 +2,13 @@
 // Font
 //-------------------------------
 $font-main: 'Source Sans Pro';
+
+//-------------------------------
+// Colors
+//-------------------------------
+$primary-blue: #5DA3DF;
+
+//-------------------------------
+// Layout
+//-------------------------------
+$content-padding: 30px;
