--- a/app/views/donut.html
+++ b/app/views/donut.html
@@ -2,6 +2,8 @@
   <header>
     <h2>Donut yo</h2>
   </header>
-  <d3-donut data="donutData"></d3-donut>
-  donut
+  <div class="content-inner">
+    <d3-donut data="donutData"></d3-donut>
+    donut
+  </div>
 </div>
