--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,5 +2,7 @@
   <header>
     <h2>Bars yo</h2>
   </header>
-  <d3-bars data="d3Data"></d3-bars>
+  <div class="content-inner">
+    <d3-bars data="d3Data"></d3-bars>
+  </div>
 </div>
