--- a/app/styles/modules/_content.scss
+++ b/app/styles/modules/_content.scss
@@ -1,5 +1,12 @@
+@import "compass/css3/box-sizing";
+
 .content {
+  overflow: hidden;
   .content-inner {
+    @include box-sizing("border-box");
     padding: $content-padding;
+    position: absolute;
+    width: 100%;
+    height: 100%;
   }
 }
