--- a/app/views/donut.html
+++ b/app/views/donut.html
@@ -3,7 +3,6 @@
     <h2>Donut yo</h2>
   </header>
   <div class="content-inner">
-    <!-- <d3-donut data="donutData"></d3-donut> -->
-    donut
+    <div d3-donut data="donutData"></div>
   </div>
 </div>
