--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,6 +3,6 @@
     <h2>Bars yo</h2>
   </header>
   <div class="content-inner">
-    <d3-bars data="d3Data"></d3-bars>
+    <div d3-bars data="d3Data"></div>
   </div>
 </div>
