--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
 // Libs
 @import "http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400";
 @import "compass/reset";
+@import "compass/css3";
 @import "sass-bootstrap/lib/bootstrap";
 @import "globals/variables";
 
@@ -14,3 +15,10 @@
 @import "modules/content";
 @import "modules/menu";
 @import "modules/nav";
+
+// this goes into modules eventually:
+
+.donut-chart {
+  position: relative;
+  height: 100%;
+}
