--- a/app/views/donut.html
+++ b/app/views/donut.html
@@ -3,6 +3,6 @@
     <h2>Donut yo</h2>
   </header>
   <div class="content-inner">
-    <div d3-donut data="donutData"></div>
+    <div d3-donut class="donut-chart" data="donutData"></div>
   </div>
 </div>
