--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -8,4 +8,10 @@ body {
 p,h1,h2,h3,h4,h5 {
   font-family: $font-main, sans-serif;
   font-weight: 300;
+  color: #777;
+}
+
+a {
+  text-decoration: none;
+  color: #777; 
 }
