--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,7 @@
 @import "http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400";
 @import "compass/reset";
 @import "compass/css3";
-@import "sass-bootstrap/lib/bootstrap";
+// @import "sass-bootstrap/lib/bootstrap";
 @import "globals/variables";
 
 // Base
