--- a/app/styles/globals/_variables.scss
+++ b/app/styles/globals/_variables.scss
@@ -4,6 +4,12 @@
 $font-main: 'Source Sans Pro';
 
 //-------------------------------
+// Typography
+//-------------------------------
+$base-font-size: 14px;
+$base-line-height: 20px;
+
+//-------------------------------
 // Colors
 //-------------------------------
 $primary-blue: #5DA3DF;
