--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,3 +22,44 @@
   position: relative;
   height: 100%;
 }
+
+.summary {
+  // position: absolute;
+  // top: 0;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
+  .summary-companies {
+    // width: 50%;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // height: 100%;
+
+    .companies-bars-legend {
+      width: 300px;
+    }
+
+    .companies-bars {
+      left: 300px;
+      right: 0;
+      position: absolute;
+    }
+
+    .companies-donut {
+      position: absolute;
+      height: 70%;
+      width: 100%;
+      top: 0;
+      left: 0;
+    }
+
+    .companies-legend {
+      position: absolute;
+      height: 30%;
+      width: 100%;
+      left: 0;
+      bottom: 0;
+    }
+  }
+}
