--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,6 +3,13 @@
     <h2>Summary</h2>
   </header>
   <div class="content-inner">
-    
+    <div class="summary">
+<!--       <div class="summary-companies">
+        <div d3-bars class="companies-bars" data="companies"></div>
+        <div class="companies-bars-legend"></div>
+      </div>
+ -->   
+      <div d3-companies-summary data="companies"></div>
+    </div>
   </div>
 </div>
